[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Aleksei Astapov <Alexey.Astapoff@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "0.115.2"
uvicorn = "0.32.0"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "auth_service.app:main"
